[tool.poetry]
name = "berserk"
version = "0.12.10"
description = "Python client for the lichess API"
authors = ["Lichess <contact@lichess.org>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/lichess-org/berserk"
documentation = "https://lichess-org.github.io/berserk/"
keywords = ["lichess", "chess", "api", "client"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# by default files declared in .gitignore are excluded
include = ["CHANGELOG.rst", "LICENSE", "docs", "berserk/py.typed"]

[tool.poetry.urls]
Changelog = "https://lichess-org.github.io/berserk/changelog.html"
"Issue Tracker" = "https://github.com/lichess-org/berserk/issues"
"Discord Server" = "https://discord.gg/lichess"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
ndjson = "^0.3.1"
python-dateutil = "^2.8.2"
deprecated = "^1.2.14"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7"
black = "^23"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
docformatter = "^1"
pyright = "^1"
requests-mock = "^1.11.0"
pytest-recording = "^0.12.2"
vcrpy = "^4.4.0"
pydantic = "^2.1.1"


[tool.pyright]
typeCheckingMode = "strict"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
