[project]
name = "berserk"
version = "0.13.2"
description = "Python client for the lichess API"
authors = [
    {name = "Lichess", email = "contact@lichess.org"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["lichess", "chess", "api", "client"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# by default files declared in .gitignore are excluded
include = ["CHANGELOG.rst", "LICENSE", "docs", "berserk/py.typed"]
dependencies = [
    "requests>=2.28.2",
    "ndjson>=0.3.1",
    "python-dateutil>=2.8.2",
    "deprecated>=1.2.14",
    "typing-extensions>=4.7.1",
]

[project.urls]
Homepage = "https://github.com/lichess-org/berserk"
Documentation = "https://lichess-org.github.io/berserk/"
Repository = "https://github.com/lichess-org/berserk"
Changelog = "https://lichess-org.github.io/berserk/changelog.html"
"Issue Tracker" = "https://github.com/lichess-org/berserk/issues"
"Discord Server" = "https://discord.gg/lichess"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "docformatter>=1",
    "pyright>=1",
    "requests-mock>=1.11.0",
    "pytest-recording>=0.12.2",
    "vcrpy>=4.4.0",
    "pydantic>=2.7.2",
]


[tool.pyright]
typeCheckingMode = "strict"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
